# fuckin_uol_ai_mid

./: AGENTS.md  CLAUDE.md  Makefile  field_notes.md  field_notes2.md  main.py  pyproject.toml  test.urdf
src/: __init__.py  creature.py  cw-envt.py  genome.py  main.py  run.py  simulation.py  test_ga.py
src/shapes/: sphere.urdf
